<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lsm9ds0_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for the Adafruit LSM9DS0 IMU</description>
  <maintainer email="phicoltan@gmail.com">Damien LaRocque</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>adafruit-circuitpython-lsm9ds0</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
